--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   google_maps_flutter: ^2.9.0
   geolocator: ^13.0.1
   google_maps_flutter_web: ^0.5.10
+  firebase_messaging: ^15.1.5
 
 dev_dependencies:
   flutter_test:
